--- a/cloud/index.html
+++ b/cloud/index.html
@@ -22,6 +22,22 @@
             <div id="circle8"></div>
         </div>
     </div>
+
+    <script type="text/javascript">
+
+        document.addEventListener("mousemove", plsmove);
+        function plsmove(e){
+            this.querySelectorAll('#cloud').forEach(cloud =>{
+                const speed = -50
+
+                const x = (window.innerWidth - e.pageX*speed)/1000
+                const y = (window.innerHeight - e.pageY*speed)/1000
+
+                cloud.style.transform = `translateX(${x}px) translateY(${y}px)`
+            })
+        }
+
+    </script>
     
 </body>
 </html>
