--- a/cloud/index.html
+++ b/cloud/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"/>
+    <script src="script.js"></script>
 
 </head>
 <body>
@@ -23,21 +24,5 @@
         </div>
     </div>
 
-    <script type="text/javascript">
-
-        document.addEventListener("mousemove", plsmove);
-        function plsmove(e){
-            this.querySelectorAll('#cloud').forEach(cloud =>{
-                const speed = -50
-
-                const x = (window.innerWidth - e.pageX*speed)/1000
-                const y = (window.innerHeight - e.pageY*speed)/1000
-
-                cloud.style.transform = `translateX(${x}px) translateY(${y}px)`
-            })
-        }
-
-    </script>
-    
 </body>
 </html>
