--- a/alpha/index.html
+++ b/alpha/index.html
@@ -48,33 +48,33 @@
   </nav>
 
   <div class="container">
-    <div class="row ">
+    <class= class="row ">
 
-      <div class="col-lg-12 col-md-12 cloud">
+        <div class="col-lg-3 col-md-2 col-xs-0"></div>
+        <div class="col-lg-6 col-md-8 col-xs-12 cloud">
 
-        <div id="circle1"></div>
-        <div id="circle2"></div>
-        <div id="circle3"></div>
-        <div id="circle4"></div>
-        <div id="circle5"></div>
-        <div id="circle6"></div>
-        <div id="circle7"></div>
-        <div id="circle8"></div>
-        <div id="iam">
-        <h1>
-          <span class="text first-text"> I'm</span>
-          <span class="text sec-text"></span>
-        </h1>
+            <div id="circle1"></div>
+            <div id="circle2"></div>
+            <div id="circle3"></div>
+            <div id="circle4"></div>
+            <div id="circle5"></div>
+            <div id="circle6"></div>
+            <div id="circle7"></div>
+            <div id="circle8"></div>
+            <div id="circle9"></div>
+            <div id="iam">
+            <h1>
+                <span class="text first-text"> I'm</span>
+                <span class="text sec-text"></span>
+            </h1>
         
-      </div>
+            </div>
       
-      <script> textwriter(); </script>
+            <script> textwriter(); </script>
 
-      </div>
+        </div>
   
-      <div class="col-lg-6 col-md-6  mt-5">
-        <!-- <img src="images/mainpageimg.png" style="width:800px;"/> -->
-      </div>
+        <div class="col-lg-3 col-md-2 col-xs-0"></div>
   
     </div>
   </div>
