--- a/alpha/index.html
+++ b/alpha/index.html
@@ -47,8 +47,8 @@
     </div>
   </nav>
 
-  <div class="container">
-    <class= class="row ">
+  <div class="container mainpage">
+    <div= class="row ">
 
         <div class="col-lg-3 col-md-2 col-xs-0"></div>
         <div class="col-lg-6 col-md-8 col-xs-12 cloud">
@@ -63,19 +63,53 @@
             <div id="circle8"></div>
             <div id="circle9"></div>
             <div id="iam">
-            <h1>
+              <h1>
                 <span class="text first-text"> I'm</span>
                 <span class="text sec-text"></span>
-            </h1>
-        
+              </h1>
             </div>
       
             <script> textwriter(); </script>
 
         </div>
-  
         <div class="col-lg-3 col-md-2 col-xs-0"></div>
   
+    </div>
+  </div>
+
+  <div class="container aboutme">
+    <div class="row">
+
+      <div class="col-xs-12 aboutmeh1">
+        <h1>About me</h1>
+      </div>
+      <div class="col-lg-8">
+        <article>
+          <h2 id="aboutmedesc">Hi, my name is Dawid. I am a Tester with over a year of expirience in test analysis and bug verification. Training to become Web Developer.</h2>
+        </article>
+      </div>
+      <div class="col-md-6 skills">
+        <h1>Technical Skills:</h1>
+        <ul class="skillslist">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JS</li>
+          <li>Bootstrap</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Jira</li>
+          <li>VS Code</li>
+          </ul>
+      </div>
+      <div class="col-md-6 skills">
+        <h1>Soft Skills:</h1>
+        <ul class="skillslist">
+          <li>flexibility</li>
+          <li>time management skills</li>
+          <li>creativity</li>
+          <li>empathy</li>
+          </ul>
+      </div>
     </div>
   </div>
   
