Added sun and changed design of website

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse px-1" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-1 mt-1">
           <li class="nav-item  ms-2">
-            <a class="nav-link active" aria-current="page" href="#" id="aboutme"><b>Home</b></a>
+            <a class="nav-link" aria-current="page" href="#"><b>Home</b></a>  <!-- active w class </-->
           </li>
           <li class="nav-item ms-2">
             <a class="nav-link" href="#"><b>About me</b></a>
@@ -47,21 +47,16 @@
     </div>
   </nav>
 
-  <div class="container mainpage">
-    <div= class="row ">
+  <div class="container-fluid mainpage">
+    <div= class="row maincloud ">
 
-        <div class="col-lg-3 col-md-2 col-xs-0"></div>
+        <div class="col-lg-3 col-md-2 col-xs-0">
+            <div class="sun"></div>
+        </div>
         <div class="col-lg-6 col-md-8 col-xs-12 cloud">
 
             <div id="circle1"></div>
             <div id="circle2"></div>
-            <div id="circle3"></div>
-            <div id="circle4"></div>
-            <div id="circle5"></div>
-            <div id="circle6"></div>
-            <div id="circle7"></div>
-            <div id="circle8"></div>
-            <div id="circle9"></div>
             <div id="iam">
               <h1>
                 <span class="text first-text"> I'm</span>
