--- a/alpha/index.html
+++ b/alpha/index.html
@@ -50,11 +50,10 @@
   <div class="container-fluid mainpage">
     <div= class="row maincloud ">
 
-        <div class="col-lg-3 col-md-2 col-xs-0">
+        <div class="col-xl-4 col-lg-3 col-md-2 col-xs-0">
             <div class="sun"></div>
         </div>
-        <div class="col-lg-6 col-md-8 col-xs-12 cloud">
-
+        <div class="col-xl-4 col-lg-6 col-md-8 col-xs-12 cloud">
             <div id="circle1"></div>
             <div id="circle2"></div>
             <div id="iam">
@@ -65,9 +64,8 @@
             </div>
       
             <script> textwriter(); </script>
-
         </div>
-        <div class="col-lg-3 col-md-2 col-xs-0"></div>
+        <div class="col-xl-4 col-lg-3 col-md-2 col-xs-0"></div>
   
     </div>
   </div>
