--- a/alpha/index.html
+++ b/alpha/index.html
@@ -19,7 +19,7 @@
     <nav class="site-nav grid">
 
         <h1>Dawid Witkowski</h1>
-        <ul>
+        <ul id="navlist" class="grid">
             <li><a href="#aboutme">About me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -44,7 +44,7 @@
 
     <section id="aboutme">
 
-        <h4>Hi, my name is Dawid. I am a Tester with over a year of expirience in test analysis and bug verification. Training to become Web Developer.</h4>
+        <h5>Hi, my name is Dawid. I am a Tester with over a year of expirience in test analysis and bug verification. Training to become Web Developer.</h5>
 
         <div id="skills" class="grid">
 
@@ -77,26 +77,26 @@
 
     <section id="projects">
 
-        <h3>Some of my Projects</h3>
+        <h3>Some of my Projects:</h3>
 
         <div id="projectlist" class="grid">
 
             <a href="">
 
                 <h4>Project1</h4>
-                <div id="project1"></div>
+                <div id="project1" class="project"></div>
 
             </a>
             <a href="">
 
                 <h4>Project2</h4>
-                <div id="project2"></div>
+                <div id="project2" class="project"></div>
 
             </a>
             <a href="">
 
                 <h4>Project3</h4>
-                <div id="project3"></div>
+                <div id="project3" class="project"></div>
 
             </a>
 
@@ -126,8 +126,8 @@
             <p class="copyright">Copyright 2023 Dawid Witkowski</p>
 
             <ul id="socials">
-                <li><a href="">LinkedIn</a></li>
-                <li><a href="">GitHub</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
             </ul>
 
         </div>
