added socials in footer

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -126,8 +126,8 @@
             <p class="copyright">Copyright 2023 Dawid Witkowski</p>
 
             <ul id="socials">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href=""></a>LinkedIn</li>
+                <li><a href=""></a>GitHub</li>
             </ul>
 
         </div>
