added socials and fixed form moving elements

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -121,16 +121,12 @@
 
     <footer>
 
-        <div class="grid">
-
             <p class="copyright">Copyright 2023 Dawid Witkowski</p>
 
-            <ul id="socials">
-                <li><a href=""></a>LinkedIn</li>
-                <li><a href=""></a>GitHub</li>
+            <ul class="grid">
+                <li id="linkedin"><a href=""></a>LinkedIn</li>
+                <li id="github"><a href=""></a>GitHub</li>
             </ul>
-
-        </div>
 
     </footer>
 
