--- a/alpha/index.html
+++ b/alpha/index.html
@@ -19,12 +19,18 @@
     <nav class="site-nav grid">
 
         <h1>Dawid Witkowski</h1>
+
+        <div class="menu-btn">
+            <div class="menu-btn__burger"></div>
+        </div>
+        
+        <script>buttontoggler()</script>
+
         <ul id="navlist" class="grid">
             <li><a href="#aboutme">About me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-
     </nav>
 
     <section id="welcome" class="grid">
